--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -281,4 +281,11 @@
 
     }
 
+    .copyright {
+        position: absolute;
+        bottom: 5px;
+        color: rgba(240, 255, 255,0.5);
+        font-size: 0.8em;
+    }
+
 }
