--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -211,7 +211,7 @@
     border-radius: 15px;
     gap: 50px;
     backdrop-filter: blur(5px);
-    background-color: rgba(124, 25, 38, 0.7);
+    background-color: rgba(165, 42, 42,0.7);
     color: aliceblue;
 
 }
@@ -221,7 +221,7 @@
     height: 40px;
     border: none;
     border-radius: 10px;
-    background-color: brown;
+    background-color: rgb(31, 30, 30);
     color: aliceblue;
     transition: transform 1s;
     
