--- a/barraflix/css/index.css
+++ b/barraflix/css/index.css
@@ -904,4 +904,26 @@ z-index: 10;
         animation-iteration-count: 1;
         animation-direction: normal;
     }
+
+    footer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 200px;
+        background-color: rgb(26, 26, 26);
+        border-top: 1px solid rgb(31, 31, 31);
+        color: aliceblue;
+        gap: 2px;
+        text-align: center;
+    }
+    
+    footer>img {
+        margin-bottom: 10px;
+    }
+    
+    footer>p:nth-child(3) {
+        color: rgb(78, 78, 78);
+    }
 }
