--- a/barraflix/css/index.css
+++ b/barraflix/css/index.css
@@ -521,7 +521,7 @@ footer>p:nth-child(3) {
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    width: 70%;
+    width: 90%;
     height: 100%;
     color: aliceblue;
 
@@ -765,8 +765,6 @@ footer>p:nth-child(3) {
         width: 20%;
         height: 100%;
         
-
-
     }
 
     .logoContainer>img {
@@ -937,6 +935,100 @@ footer>p:nth-child(3) {
         
     }
 
+    .infoContainer {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: rgba(2, 2, 2, 0.8);
+        z-index: 30;
+        backdrop-filter: blur(5px);
+    
+    }
+    
+    .infoBox {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 1200px;
+        max-height: 700px;
+        width: 100%;
+        height: 100%;
+        box-sizing: border-box;
+        background-position: center;
+        background-size: cover;
+        background-repeat: none;
+        overflow: hidden;
+        border-radius: 0px;
+        border: none;
+        border-style: none;
+        animation-name: zoom;
+        animation-duration: 0.5s;
+        animation-direction: alternate;
+    }
+    
+    .posterInfo{
+        display: none;
+    }
+
+    .textInfoHeader {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        width: 100%;
+        height: 20%;
+        box-sizing: border-box;
+        padding: 20px;
+    
+    }
+    
+    .textInfoHeaderDesc {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        gap: 7px;
+    }
+    
+    .ballList {
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        background-color: aliceblue;
+    }
+    
+    .textInfoMain {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+        width: 100%;
+        height: 60%;
+        box-sizing: border-box;
+        gap: 10px;
+        padding: 20px;
+    
+    }
+    
+    .btn-trailer {
+        position: relative;
+        width: 120px;
+        height: 35px;
+        background-color: rgb(175, 12, 12);
+        border: none;
+        color: aliceblue;
+        border-radius: 15px;
+        margin-top: 10px;
+        font-weight: 500;
+        transition: all 300ms;
+    }
+
     footer {
         display: flex;
         flex-direction: column;
@@ -958,4 +1050,6 @@ footer>p:nth-child(3) {
     footer>p:nth-child(3) {
         color: rgb(78, 78, 78);
     }
+
+
 }
