--- a/barraflix/css/index.css
+++ b/barraflix/css/index.css
@@ -764,7 +764,7 @@ footer>p:nth-child(3) {
         align-items: center;
         width: 20%;
         height: 100%;
-        
+
     }
 
     .logoContainer>img {
@@ -887,7 +887,7 @@ footer>p:nth-child(3) {
         padding-top: 100px;
         transition: all 1s;
 
-        
+
     }
 
     .btnMenu,
@@ -932,17 +932,18 @@ footer>p:nth-child(3) {
         animation-name: menu-close;
         animation-duration: 1s;
         animation-direction: normal;
-        
+
     }
 
-.containerCards{
-    padding: 0px;
-}
+    .containerCards {
+        padding: 0px;
+    }
 
-.sectionHeader{
-    justify-content: center;
-    padding-left: 10px;
-}
+    .sectionHeader {
+        justify-content: center;
+        padding-left: 10px;
+    }
+
     .sectionContainer {
         display: flex;
         justify-content: flex-start;
@@ -950,10 +951,10 @@ footer>p:nth-child(3) {
         height: 90%;
         box-sizing: border-box;
         overflow: hidden;
-    
-    
+
+
     }
-    
+
     .navLeft {
         position: relative;
         display: flex;
@@ -964,19 +965,19 @@ footer>p:nth-child(3) {
         z-index: 2;
         background: none;
         transition: all 1s;
-    
+
     }
-    
+
     .navLeft:hover {
-    
+
         background: linear-gradient(90deg, rgba(175, 12, 12, 0.5), rgba(175, 12, 12, 0));
         background: linear-gradient(90deg, rgba(88, 88, 88, 0.5), rgba(175, 12, 12, 0))
     }
-    
+
     .arrowLeft {
         filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
     }
-    
+
     .sectionContainerBox {
         position: relative;
         justify-content: flex-start;
@@ -988,10 +989,10 @@ footer>p:nth-child(3) {
         gap: 20px;
         padding: 10px;
         box-sizing: border-box;
-    
-    
+
+
     }
-    
+
     .navRight {
         display: flex;
         position: relative;
@@ -1004,14 +1005,14 @@ footer>p:nth-child(3) {
         z-index: 2;
         background-image: linear-gradient(90deg, rgba(88, 88, 88, 0), rgba(88, 88, 88, 0));
         transition: all 1s;
-    
+
     }
-    
+
     .navRight:hover {
         background-image: linear-gradient(90deg, rgba(88, 88, 88, 0), rgba(88, 88, 88, 0.5));
-    
+
     }
-    
+
     .arrowRight {
         filter: invert(8%) sepia(100%) saturate(0%) hue-rotate(246deg) brightness(300%) contrast(143%);
     }
@@ -1028,9 +1029,9 @@ footer>p:nth-child(3) {
         background-color: rgba(2, 2, 2, 0.8);
         z-index: 30;
         backdrop-filter: blur(5px);
-    
+
     }
-    
+
     .infoBox {
         display: flex;
         flex-direction: column;
@@ -1052,8 +1053,8 @@ footer>p:nth-child(3) {
         animation-duration: 0.5s;
         animation-direction: alternate;
     }
-    
-    .posterInfo{
+
+    .posterInfo {
         display: none;
     }
 
@@ -1066,9 +1067,9 @@ footer>p:nth-child(3) {
         height: 20%;
         box-sizing: border-box;
         padding: 20px;
-    
+
     }
-    
+
     .textInfoHeaderDesc {
         flex-wrap: wrap;
         display: flex;
@@ -1076,14 +1077,14 @@ footer>p:nth-child(3) {
         align-items: center;
         gap: 7px;
     }
-    
+
     .ballList {
         width: 7px;
         height: 7px;
         border-radius: 50%;
         background-color: aliceblue;
     }
-    
+
     .textInfoMain {
         display: flex;
         flex-direction: column;
@@ -1094,9 +1095,9 @@ footer>p:nth-child(3) {
         box-sizing: border-box;
         gap: 10px;
         padding: 20px;
-    
+
     }
-    
+
     .btn-trailer {
         position: relative;
         width: 120px;
@@ -1132,5 +1133,89 @@ footer>p:nth-child(3) {
         color: rgb(78, 78, 78);
     }
 
+    .btn-trailer {
+        position: relative;
+        width: 120px;
+        height: 35px;
+        background-color: rgb(175, 12, 12);
+        border: none;
+        color: aliceblue;
+        border-radius: 15px;
+        margin-top: 10px;
+        font-weight: 500;
+        transition: all 300ms;
+    }
+
+    .btn-close-trailer {
+        filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(0deg) brightness(600%) contrast(100%);
+    }
+
+    .btn-close-trailer:hover {
+        filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(0deg) brightness(100%) contrast(100%);
+    }
+
+    .trailer-container {
+        max-width: 1200px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        z-index: 10;
+        box-sizing: border-box;
+        overflow: hidden;
+        animation-name: zoom;
+        animation-duration: 0.5s;
+        animation-direction: alternate;
+    }
+
+    .trailer-container-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        width: 100%;
+        height: 3%;
+        padding: 2px;
+
+    }
+
+    .trailer-container-header>h1 {
+        color: aliceblue;
+        padding-left: 10px;
+        font-size: 1rem;
+
+    }
+
+    .trailer-container-movie {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+        padding: 0px 0px;
+        box-sizing: border-box;
+        overflow: hidden;
+
+    }
+
+    .trailer {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border: 3px groove rgb(31, 31, 31);
+        border-radius: 0px;
+        box-sizing: border-box;
+        overflow: hidden;
+        background-color: rgba(0, 0, 0, 0.5);
+        backdrop-filter: blur(5px);
+    }
+
+    .btn-trailer:hover {
+        background-color: rgb(212, 24, 24);
+        transform: scale(1.1);
+    }
 
 }
