--- a/lol/css/index.css
+++ b/lol/css/index.css
@@ -101,7 +101,7 @@ body {
 
 }
 
-.lol-logo::selection{
+.lol-logo::selection {
     background-color: none;
 }
 
@@ -228,7 +228,7 @@ nav {
     padding-bottom: 30px;
     scrollbar-width: thin;
     scrollbar-color: rgb(12, 148, 96) rgb(22, 22, 22);
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .infos {
@@ -463,7 +463,7 @@ nav {
     box-sizing: border-box;
     overflow: hidden;
     transition: all 1s;
-    
+
 }
 
 .img-champ-card {
@@ -580,8 +580,7 @@ nav {
     animation-delay: 300ms;
     opacity: 0;
     animation-fill-mode: forwards;
-
-
+    border-radius: 20px;
 
 }
 
@@ -631,9 +630,10 @@ nav {
     overflow: hidden;
     background-color: rgba(5, 5, 5, 0.5);
     max-width: 1200px;
-    border: 1px groove rgb(10, 95, 63);
+    border: 1px groove rgb(0, 0, 0);
     padding: 20px;
     background: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0));
+    border-radius: 20px;
 
 }
 
@@ -778,13 +778,13 @@ nav {
 
 }
 
-.msgErro{
+.msgErro {
     color: aliceblue;
     font-family: 'League Spartan', sans-serif;
 }
 
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 767px) {
 
     .container-main {
         display: flex;
@@ -796,10 +796,10 @@ nav {
         box-sizing: border-box;
         overflow: hidden;
         backdrop-filter: blur(5px);
-    
-    
+
+
     }
-    
+
     .container {
         position: absolute;
         display: flex;
@@ -814,18 +814,18 @@ nav {
         box-shadow: 5px 5px 50px black;
         border: 2px groove rgba(4, 151, 139, 0.5);
         background-color: black;
-    
+
     }
-    
+
     .video-bg {
         position: relative;
         width: 100%;
         height: 100%;
         object-fit: cover;
-    
-    
+
+
     }
-    
+
     .img-bg {
         position: relative;
         width: 100%;
@@ -834,19 +834,19 @@ nav {
         animation-name: fadein;
         animation-duration: 1s;
         animation-direction: normal;
-    
+
     }
-    
+
     @keyframes fadein {
         from {
             opacity: 0;
         }
-    
+
         to {
             opacity: 1;
         }
     }
-    
+
     .container-header {
         display: flex;
         flex-direction: column;
@@ -862,17 +862,17 @@ nav {
         box-sizing: border-box;
         overflow: hidden;
         gap: 5px;
-        
+
     }
-    
+
     .lol-logo {
         width: 150px;
     }
 
-    .lol-logo::selection{
+    .lol-logo::selection {
         background-color: none;
     }
-    
+
     .btn-jogar {
         position: relative;
         width: 145px;
@@ -886,13 +886,13 @@ nav {
         background-repeat: no-repeat;
         background-color: azure;
     }
-    
+
     .btn-jogar:hover {
         background-position: 145px 0px;
     }
-    
-    
-    
+
+
+
     .container-m {
         position: absolute;
         display: flex;
@@ -904,9 +904,11 @@ nav {
         background-color: rgba(2, 2, 2, 0.5);
         z-index: 1;
         bottom: 0px;
-    
+        box-sizing: border-box;
+        overflow: hidden;
+
     }
-    
+
     .container-menu {
         position: absolute;
         display: flex;
@@ -922,7 +924,7 @@ nav {
         gap: 0px;
         padding-top: 0px;
     }
-    
+
     .riot-logo {
         justify-self: center;
         align-self: center;
@@ -931,11 +933,11 @@ nav {
         cursor: pointer;
         padding-left: 15px;
     }
-    
+
     .riot-logo:hover {
         filter: invert(100%) sepia(100%) saturate(100%) hue-rotate(0deg) brightness(300%) contrast(100%);
     }
-    
+
     nav {
         display: flex;
         flex-direction: row;
@@ -944,7 +946,7 @@ nav {
         gap: 10%;
         padding-right: 15px;
     }
-    
+
     .menu-items {
         display: none;
         background-image: linear-gradient(#6e32a7, #6e32a7);
@@ -955,36 +957,36 @@ nav {
         color: rgb(190, 195, 199);
         font-weight: 500;
         font-size: 0.9rem;
-    
+
     }
-    
+
     .menu-class {
         display: flex;
         justify-content: center;
         align-items: center;
         cursor: pointer;
     }
-    
+
     .menu-class>img {
         transition: all 300ms;
         filter: invert(8%) sepia(100%) saturate(200%) hue-rotate(100deg) brightness(600%) contrast(100%);
     }
-    
+
     .menu-class>img:hover {
         transform: scale(1.1);
         filter: invert(8%) sepia(100%) saturate(200%) hue-rotate(0deg) brightness(800%) contrast(100%);
     }
-    
+
     [menu-destaque] {
         filter: invert(8%) sepia(100%) saturate(200%) hue-rotate(0deg) brightness(100%) contrast(100%);
     }
-    
+
     .menu-items:hover {
         background-repeat: no-repeat;
         cursor: pointer;
         color: aliceblue;
     }
-    
+
     .container-info {
         display: flex;
         justify-content: center;
@@ -997,9 +999,10 @@ nav {
         padding-bottom: 20px;
         scrollbar-width: thin;
         scrollbar-color: rgb(12, 148, 96) rgb(22, 22, 22);
-        overflow-x: hidden;
+        overflow: hidden;
+        box-sizing: border-box;
     }
-    
+
     .infos {
         display: flex;
         flex-direction: column;
@@ -1011,9 +1014,9 @@ nav {
         padding: 100px 20px;
         box-sizing: border-box;
         overflow: hidden;
-    
+
     }
-    
+
     .home-infos {
         display: flex;
         flex-direction: column;
@@ -1022,39 +1025,39 @@ nav {
         align-self: center;
         justify-self: center;
     }
-    
+
     .home-infos>h1 {
         font-size: 5rem;
         font-family: 'League Spartan', sans-serif;
     }
-    
+
     .home-infos>h2 {
         font-size: 2rem;
         font-family: 'League Spartan', sans-serif;
     }
-    
+
     .home-infos>h3 {
         font-size: 1rem;
         font-weight: 100;
         text-align: center;
         max-width: 40rem;
     }
-    
+
     .infos>h1 {
         font-size: 5rem;
         font-family: 'League Spartan', sans-serif;
-    
+
     }
-    
+
     .infos>h3 {
         font-size: 1rem;
         font-weight: 100;
         max-width: 20rem;
-    
-    
-    
+
+
+
     }
-    
+
     .cards-rotation {
         display: flex;
         justify-content: center;
@@ -1063,7 +1066,7 @@ nav {
         height: 25%;
         padding: 5px;
     }
-    
+
     .nav-left {
         display: flex;
         justify-content: center;
@@ -1071,7 +1074,7 @@ nav {
         height: 100%;
         box-sizing: border-box;
         overflow: hidden;
-    
+
     }
 
     .cards-rotation-container {
@@ -1084,9 +1087,9 @@ nav {
         padding: 10px;
         box-sizing: border-box;
         overflow: hidden;
-    
+
     }
-    
+
     .card-rotation {
         position: relative;
         display: flex;
@@ -1105,18 +1108,18 @@ nav {
         filter: brightness(60%);
         cursor: pointer;
     }
-    
+
     .card-rotation:hover {
         filter: brightness(100%);
         background-image: linear-gradient(rgba(4, 151, 139, 0), rgba(151, 136, 4, 0.5));
     }
-    
+
     .card-rotation>div {
         width: 100%;
         height: 100%;
-    
+
     }
-    
+
     .champ-rotation-name {
         display: flex;
         flex-direction: column;
@@ -1127,17 +1130,17 @@ nav {
         left: 15px;
         bottom: 10px;
         text-shadow: 1px 5px 5px black;
-    
+
     }
-    
+
     .img-rotation {
         width: 100%;
         height: 100%;
         object-fit: cover;
         border-radius: 18px;
-    
+
     }
-    
+
     .nav-right {
         display: flex;
         justify-content: center;
@@ -1146,52 +1149,52 @@ nav {
         height: 100%;
         box-sizing: border-box;
         overflow: hidden;
-    
+
     }
-    
+
     .arrow-nav {
         width: 35px;
         filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(180deg) brightness(160%) contrast(143%);
     }
-    
+
     .arrow-nav:hover {
         filter: invert(8%) sepia(100%) saturate(200%) hue-rotate(0deg) brightness(200%) contrast(100%);
     }
-    
+
     [slide-prev] {
         animation-name: slideLeft;
         animation-duration: 1s;
         animation-direction: normal;
         transition: all 1s;
     }
-    
+
     @keyframes slideLeft {
         from {
             transform: translateX(0px);
         }
-    
+
         to {
             transform: translateX(-205px);
         }
     }
-    
+
     [slide-next] {
         animation-name: slideRight;
         animation-duration: 1s;
         animation-direction: normal;
         transition: all 1s;
     }
-    
+
     @keyframes slideRight {
         from {
             transform: translateX(0px);
         }
-    
+
         to {
             transform: translateX(205px);
         }
     }
-    
+
     .champ-card {
         width: 150px;
         height: 200px;
@@ -1205,38 +1208,38 @@ nav {
         animation-duration: 1s;
         animation-direction: normal;
         cursor: pointer;
-    
+
     }
-    
-    
-    
+
+
+
     @keyframes fadeIn {
         from {
             transform: translateY(220px);
             opacity: 0;
         }
-    
+
         to {
             transform: translateY(0px);
             opacity: 1;
         }
     }
-    
+
     .champ-card:hover {
         filter: brightness(110%);
         border: 1px groove rgba(204, 158, 6, 1);
-    
+
     }
-    
+
     .img-champ-card-container {
         width: 100%;
         height: 85%;
         box-sizing: border-box;
         overflow: hidden;
         transition: all 1s;
-        
+
     }
-    
+
     .img-champ-card {
         width: 100%;
         height: 100%;
@@ -1246,12 +1249,12 @@ nav {
         transition: all 500ms;
         filter: brightness(60%);
     }
-    
+
     [img-destaque] {
         transform: scale(1.1);
         filter: brightness(100%);
     }
-    
+
     .champ-card-footer {
         display: flex;
         justify-content: flex-start;
@@ -1266,9 +1269,9 @@ nav {
         background-color: rgb(0, 134, 90);
         padding-left: 10px;
         transition: all 300ms;
-    
+
     }
-    
+
     [destaqueFooter] {
         display: flex;
         justify-content: flex-start;
@@ -1278,9 +1281,9 @@ nav {
         background-color: rgb(206, 181, 97);
         font-size: 0.5rem;
         padding-left: 30px;
-    
+
     }
-    
+
     .classe-titulo {
         color: rgb(255, 255, 255);
         animation-name: fade-titulo;
@@ -1290,36 +1293,36 @@ nav {
         font-weight: 800;
         text-transform: uppercase;
         font-family: 'League Spartan', sans-serif;
-    
-    
+
+
     }
-    
+
     @keyframes fade-titulo {
         0% {
             transform: translateX(400px);
             opacity: 0;
-    
+
         }
-    
+
         30% {
             transform: translateX(0px);
             opacity: 1;
-    
+
         }
-    
+
         70% {
             transform: translateX(0px);
             opacity: 1;
-    
+
         }
-    
+
         100% {
             transform: translateX(-400px);
             opacity: 0;
-    
+
         }
     }
-    
+
     .container-champ-infos {
         position: absolute;
         top: 0px;
@@ -1333,7 +1336,7 @@ nav {
         z-index: 10;
         backdrop-filter: blur(10px);
     }
-    
+
     .champ-infos-main {
         position: absolute;
         display: flex;
@@ -1351,32 +1354,33 @@ nav {
         animation-delay: 300ms;
         opacity: 0;
         animation-fill-mode: forwards;
-z-index: 20;
+        z-index: 20;
+        border-radius: 0px;
     }
-    
+
     @keyframes fadeInfo {
         from {
             opacity: 0;
             transform: scale(0);
         }
-    
+
         to {
             opacity: 1;
             transform: scale(1);
         }
     }
-    
-    
+
+
     .btn-close-info {
         width: 35px;
         filter: invert(0%) sepia(0%) saturate(0%) hue-rotate(180deg) brightness(500%) contrast(143%);
     }
-    
+
     .btn-close-info:hover {
         width: 35px;
         filter: invert(0%) sepia(0%) saturate(100%) hue-rotate(170deg) brightness(200%) contrast(143%);
     }
-    
+
     .champ-infos-header {
         position: absolute;
         display: flex;
@@ -1386,8 +1390,8 @@ z-index: 20;
         height: 5%;
         z-index: 10;
     }
-    
-    
+
+
     .champ-infos-sub {
         display: flex;
         flex-direction: column;
@@ -1403,9 +1407,10 @@ z-index: 20;
         border: 1px groove rgb(10, 95, 63);
         padding: 10px;
         background: linear-gradient(rgba(0, 0, 0, 0), rgb(0, 0, 0));
-    
+        border-radius: 0px;
+
     }
-    
+
     .champ-infos-main-top {
         display: flex;
         flex-direction: column;
@@ -1415,23 +1420,23 @@ z-index: 20;
         height: 50%;
         color: aliceblue;
         text-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
-    
+
     }
-    
+
     .champ-infos-main-top>h1 {
         font-size: 5rem;
         font-family: 'League Spartan', sans-serif;
         font-style: italic;
         text-transform: uppercase;
     }
-    
+
     .champ-infos-main-top>h2 {
         font-size: 1.2rem;
         font-family: 'League Spartan', sans-serif;
         font-style: italic;
         text-transform: uppercase;
     }
-    
+
     .champ-infos-main-bottom {
         display: flex;
         justify-content: center;
@@ -1439,9 +1444,9 @@ z-index: 20;
         width: 100%;
         height: 50%;
         border: 1px solid rgba(187, 187, 187, 0.5);
-    
+
     }
-    
+
     .champ-infos-bottom-left {
         display: flex;
         justify-content: center;
@@ -1451,7 +1456,7 @@ z-index: 20;
         gap: 10%;
         text-transform: uppercase;
     }
-    
+
     .champ-function {
         display: flex;
         flex-direction: column;
@@ -1460,13 +1465,13 @@ z-index: 20;
         color: aliceblue;
         font-size: 0.9rem;
     }
-    
+
     .img-function {
         filter: invert(8%) sepia(100%) saturate(300%) hue-rotate(0deg) brightness(700%) contrast(100%);
         width: 50px;
         margin-bottom: 10px;
     }
-    
+
     .champ-difficulty {
         display: flex;
         flex-direction: column;
@@ -1475,7 +1480,7 @@ z-index: 20;
         color: aliceblue;
         font-size: 0.9rem
     }
-    
+
     .difficulty-style {
         width: 90px;
         height: 50px;
@@ -1484,35 +1489,35 @@ z-index: 20;
         align-items: center;
         gap: 2px;
     }
-    
+
     .difficulty-style>div {
         width: 20px;
         height: 12px;
         background-color: rgb(75, 74, 74);
         transform: skewX(-40deg);
     }
-    
+
     [baixa]>div:nth-child(-n+1) {
         background-color: rgb(0, 152, 253);
     }
-    
+
     [moderada]>div:nth-child(-n+2) {
         background-color: rgb(0, 152, 253);
     }
-    
+
     [alta]>div {
         background-color: rgb(0, 152, 253);
     }
-    
-    
+
+
     .champ-function>p:nth-child(2) {
         color: rgb(238, 185, 88);
     }
-    
+
     .champ-difficulty>p:nth-child(2) {
         color: rgb(238, 185, 88);
     }
-    
+
     .champ-infos-bottom-right {
         display: flex;
         justify-content: center;
@@ -1523,9 +1528,9 @@ z-index: 20;
         padding: 5px;
         box-sizing: border-box;
         font-size: 0.8rem;
-    
+
     }
-    
+
     .img-bg-champ-infos {
         width: 100%;
         height: 100%;
@@ -1533,24 +1538,24 @@ z-index: 20;
         z-index: -1;
         filter: blur(1px);
     }
-    
+
     .container-info::-webkit-scrollbar {
         width: 3px;
     }
-    
+
     .container-info::-webkit-scrollbar-track {
         background: rgb(22, 22, 22);
     }
-    
+
     .container-info::-webkit-scrollbar-thumb {
         background-color: rgb(12, 148, 96);
         border-radius: 20px;
-    
+
     }
-    .msgErro{
+
+    .msgErro {
         color: aliceblue;
         font-size: 0.8em;
         font-family: 'League Spartan', sans-serif;
     }
 }
-
